# RecipesMountain

./: .gitignore  Jenkinsfile  README.md  backend.env  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.yml  postgres.env
.github/workflows/: ci.yaml  security.yaml
buildenv/: docker-compose.yml
buildenv/jenkins/: Dockerfile
k8s/: backend-deployment.yaml  backend-env-configmap.yaml  frontend-deployment.yaml  postgres-deployment.yaml  postgres-env-configmap.yaml
k8s/init-services/: backend-service.yaml  frontend-service.yaml  postgres-service.yaml
services/backend/: .dockerignore  .env-test  Dockerfile  Dockerfile.dev  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
services/backend/alembic/: env.py
services/backend/alembic/versions/: 1b7832bb3dc5_first_revision.py  e1d5e99cfb13_first_revision.py
services/backend/app/: __init__.py  main.py
services/backend/app/api/: api.py  deps.py
services/backend/app/api/endpoints/: comments.py  login.py  products.py  recipes.py  tags.py  users.py  utils.py
services/backend/app/core/: config.py  tasks.py
services/backend/app/crud/: __init__.py  crud_comments.py  crud_product.py  crud_recipe.py  crud_recpie.py  crud_stats.py  crud_tags.py  crud_user.py
services/backend/app/db/: base.py  base_class.py  init_db.py  session.py
services/backend/app/models/: TSVector.py  __init__.py  comment.py  favorite_recipes.py  product.py  products_in_stages.py  recipe.py  recipe_ratings.py  recipe_tags.py  recpie.py  stage.py  stats.py  step.py  tag.py  user.py
services/backend/app/schemas/: __init__.py  comment.py  product.py  recipe.py  recpie.py  stage.py  tag.py  user.py
services/backend/app/tests/: test_backend.py
services/backend/app/tests/api/api_v1/: test_search.py  test_tags.py  test_users.py
services/backend/app/tests/crud/: test_comment.py  test_search.py  test_tag.py  test_user.py
services/backend/app/tests/utils/: recpies.py
services/backend/src/: __init__.py
services/backend/tests/: test_backend.py
services/frontend/: .dockerignore  .gitignore  Dockerfile  (+6 more)
(+48 files in other folders)
